# scan

./: README.md  pyproject.toml  requirements.txt
scripts/: gen_demo.sh
src/ardt4d/: __init__.py  config.py  synth.py  test.py  test_viz.py  train.py  visualize.py
src/ardt4d.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ardt4d/datasets/: base.py  build.py
src/ardt4d/models/: pvt4d.py  pvt4d_v2.py
